# plse-beleg-5

./: Makefile.am  Makefile.am.bak  Makefile.in  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.am.bak  Makefile.in  aufgabe5.1.cc  aufgabe5.10.cc  aufgabe5.3.cc  aufgabe5.5.cc  aufgabe5.6.cc  aufgabe5.7.cc  aufgabe5.9.cc  box.cc  box.h  color.cc  color.h  point3d.cc  point3d.h  pointtest.cc  shape.cc  shape.h  sphere.cc  sphere.h
